examples/test/testpolicy10015.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10015
  namespace: namespace226
spec:
  podSelector:
    matchLabels:
      key35: value18
      key13: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value21
          key14: value20
          key6: value12
      podSelector:
        matchLabels:
          key45: value14
